--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
         tools:targetApi="31">
         <service
             android:name=".MusicService"
+            android:foregroundServiceType="mediaPlayback"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false"
+            tools:ignore="ForegroundServicePermission"></service>
 
         <activity
             android:name=".MainActivity"
